Salesforce/main/default/objects/Calendar_Event__c/Calendar_Event__c.object-meta.xml
<CustomObject>
    <label>Calendar Event</label>
    <nameField>
        <label>Event Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Event</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>