Salesforce/main/default/objects/Calendar_Event__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inventário físico</fullName>
            </value>
            <value>
                <fullName>Descarte</fullName>
            </value>
            <value>
                <fullName>Inventário de sobras</fullName>
            </value>
            <value>
                <fullName>Documental</fullName>
            </value>
            <value>
                <fullName>Eventual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>