Salesforce/main/default/objects/Calendar_Event__c/fields/Nome_do_responsavel__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_responsavel__c</fullName>
    <label>Nome do responsável</label>
    <length>40</length>
    <type>Text</type>
</CustomField>