Salesforce/main/default/objects/Calendar_Event__c/fields/Obsevacion__c.field-meta.xml
<CustomField>
    <fullName>Obsevacion__c</fullName>
    <label>Observação</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>