Salesforce/main/default/objects/Calendar_Event__c/fields/Plano_de_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Plano_de_Auditoria__c</fullName>
    <label>Plano de Auditoria</label>
    <referenceTo>Plano_de_Auditoria__c</referenceTo>
    <relationshipLabel>Visita</relationshipLabel>
    <relationshipName>Visita</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>