Salesforce/main/default/objects/Calendar_Event__c/fields/UF__c.field-meta.xml
<CustomField>
    <fullName>UF__c</fullName>
    <label>UF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>